wrong code div to button solved

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="our-features">
                 <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span id="features">Features</span></h3>
                 <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <div class="btn-primary">Explore More</div>
+                <button class="btn-primary">Explore More</button> 
             </div>
             
         </section>
