--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <img src="images/team4.png" alt="two architect handshake about design is final">
             </div>
             <div class="our-features">
-                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span id="features">Features</span></h3>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span id="features" class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button> 
             </div>
             
