--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             
         </section>
-        <!-- features will enjoy -->
+        <!-- Some Facts -->
          <section>
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -79,9 +79,19 @@
                  </div>
             </div>
          </section>
-         <!-- Some Facts -->
-          <section class="some-facts">
-
+         <!-- Our Sponsors -->
+          <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="Spotify">
+                <img src="images/sponsors/amazon.png" alt="Amazon">
+                <img src="images/sponsors/google.png" alt="Google">
+                <img src="images/sponsors/telerama.png" alt="Telerama">
+                <img src="images/sponsors/figma.png" alt="Figma">
+            </div>
           </section>
     </main>
     <footer>
