footer section design

--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
           </section>
     </main>
     <footer>
-
+        <div class="footer-container bg-light">
+            <p class="footer-text">All rights reserved copyright@2025 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
